# Home_Work_WEB_13_Part_1_Advanced

./: main.py  pyproject.toml
migrations/versions/: 4280ea71d295_add_user_role.py
postgres-data/: postmaster.pid
postgres-data/base/16384/: 1247  1249  1259  16388  16391  16393  16394  16400  16402  16404  16405  16411  16413  16415  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  (+3 more)
postgres-data/base/5/: pg_internal.init
postgres-data/global/: pg_control  pg_internal.init
postgres-data/pg_xact/: 0000
src/conf/: config.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  users.py
src/schemas/: schemas.py  user.py
src/services/: auth.py
src/services/templates/: password_reset_email.html
